the final commit

--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
+* {
+  padding: 5px;
+  margin: 10px;
+}
+
+body {
+  border: 1px solid black;
+  text-align: center;
+  background-color: antiquewhite;
+}
+
 h1 {
-    text-align: center;
-    background-color: aquamarine;
-    color: cadetblue;
+  background-color: #bfffea;
+  color: cadetblue;
+  border: 1px solid black;
+}
+h3 {
+  background-color: azure;
+  color: burlywood;
+  border: 1px solid black;
+}
+h4 {
+  background-color: beige;
+  color: chocolate;
+  border: 1px solid black;
+}
+
+button {
+  background-color: #92ffdb;
+  color: #5d9da0;
+  border: 1px solid black;
 }
